Form validation & request

--- a/themes/jelo/layouts/index.html
+++ b/themes/jelo/layouts/index.html
@@ -1,5 +1,6 @@
 {{ partial "head.html" . }}
 	<div class="container">
+		<div id="messages"></div>
 		<h1>{{ .Title }}</h1>
 		{{ partial "form.html" .}}
 	</div>
