--- a/themes/jelo/layouts/partials/footer.html
+++ b/themes/jelo/layouts/partials/footer.html
@@ -2,6 +2,7 @@
     </footer>
 	<script src="/js/jquery-1.11.3.min.js"></script>
     <script src="/js/bootstrap.js"></script>
+    <script src="/js/validator.js"></script>
     <script src="/js/jelly.js"></script>
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </body>
