--- a/themes/jelo/layouts/partials/form.html
+++ b/themes/jelo/layouts/partials/form.html
@@ -1,17 +1,17 @@
-<form id="salary-form">
+<form id="salary-form" class="validate">
 	<div class="col-12 col-sm-12 col-md-8 col-lg-6">
 		<div class="row">
 			<div class="col-12 col-sm-6">
 				<div class="form-group">
 					<label for="profession">{{ .Params.professionSpecific }}</label>
-					<input type="text" class="form-control" id="profession" placeholder="{{ .Params.professionSpecific_Placeholder }}">
+					<input type="text" class="form-control" id="profession" name="Profession" placeholder="{{ .Params.professionSpecific_Placeholder }}" required>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6">
 				<div class="form-group">
 					<label for="profession-category">{{ .Params.professionCategory }}</label>
-					<select type="text" class="form-control" id="profession-category" placeholder="{{ .Params.professionCategory_Placeholder }}">
-						<option hidden>{{ .Params.professionCategory_Placeholder }}</option>
+					<select type="text" class="form-control" id="profession-category" name="ProfessionCategory" placeholder="{{ .Params.professionCategory_Placeholder }}" required>
+						<option hidden selected disabled value="">{{ .Params.professionCategory_Placeholder }}</option>
 						{{ range  $index, $element := .Params.professionCategories }}
 						<option data="{{ $index }}">{{ $element.name }}</option>
 						{{ end }}
@@ -23,14 +23,14 @@
 			<div class="col-12 col-sm-6">
 				<div class="form-group">
 					<label for="income">{{ .Params.income }}</label>
-					<input type="text" class="form-control" id="income" placeholder="{{ .Params.income_Placeholder }}">
+					<input type="number" class="form-control" id="income" min="1" max="2147483647" placeholder="{{ .Params.income_Placeholder }}" required>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6">
 				<div class="form-group">
 					<label for="employmentType">{{ .Params.employmentType }}</label>
-					<select type="text" class="form-control" id="employmentType" placeholder="{{ .Params.employmentType_Placeholder }}">
-						<option hidden>{{ .Params.employmentType_Placeholder }}</option>
+					<select type="text" class="form-control" id="employmentType" name="EmploymentType" placeholder="{{ .Params.employmentType_Placeholder }}" required>
+						<option hidden selected disabled value="">{{ .Params.employmentType_Placeholder }}</option>
 						{{ range  $index, $element := .Params.employmentTypes }}
 						<option data="{{ $index }}">{{ $element.name }}</option>
 						{{ end }}
@@ -42,13 +42,13 @@
 			<div class="col-12 col-sm-6">
 				<div class="form-group">
 					<label for="age">{{ .Params.age }}</label>
-					<input type="text" class="form-control" id="age" placeholder="{{ .Params.age_Placeholder }}">
+					<input type="number" class="form-control" id="age" name="Age" min="18" max="100" placeholder="{{ .Params.age_Placeholder }}">
 				</div>
 			</div>
 			<div class="col-12 col-sm-6">
 				<div class="form-group">
 					<label for="experience">{{ .Params.experience }}</label>
-					<input type="text" class="form-control" id="experience" placeholder="{{ .Params.experience_Placeholder }}">
+					<input type="number" class="form-control" id="experience" name="Experience" min="0" max="100" step="0.1" placeholder="{{ .Params.experience_Placeholder }}">
 				</div>
 			</div>
 		</div>
@@ -56,7 +56,7 @@
 			<div class="col-md-12">
 				<div class="form-group">
 					<label for="additionalInfo">{{ .Params.additionalInfo }}</label>
-					<input type="text" class="form-control" id="additionalInfo" placeholder="{{ .Params.additionalInfo_Placeholder }}">
+					<input type="text" class="form-control" id="additionalInfo" name="AdditionalInfo" placeholder="{{ .Params.additionalInfo_Placeholder }}">
 				</div>
 			</div>
 		</div>
